@@ -2,8 +2,10 @@ update-manager (0.42.2ubuntu16) dapper; urgency=low
 
   * use version and section of the source package (if this information is
     available) when building the changelog URL (ubuntu #40058)
+  * SoftwareProperties/SoftwareProperties.py:
+    - if no config is found create a new one (ubuntu: #37560)
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 May 2006 17:33:40 +0200
 
 update-manager (0.42.2ubuntu15) dapper; urgency=low
 
